# TetraGPU

./: .gitignore  1k_datasets.sh  8kep_datasets.sh  CMakeLists.txt  README.md  artificial_dataset.sh  convert_vtk_to_txt.py  debug.sh  main.cpp  make_mesh.py  make_profiling.sh  ours.sh  processTetra.py  processours.py  profiling_postprocess.py  pyclassify.py  test.sh
hand/: GDBPrettyPrinters.py  README.md  benchmark_pcie.cu  check_size.py  export_specific.py  perm.cpp  shuffle.cu  shuffle_6_to_4.cu  sim_shuffle_6_to_4.py  validate_hypothesis.py
include/: argparse.h  cpu_extraction.h  cuda_extraction.h  cuda_extraction.h.in  cuda_safety.h  datatypes.h  datatypes.h.in  emoji.h  metrics.h  validate.h  vtk_load.h
include/alg/: critPoints.h  inspector.h
scripts/: ACTOPO.sh  GALE.sh  ivy_ours.sh  palmetto_ours.sh  processACTOPO.py  processGALE.py
src/: argparse.cpp  argparse.cu  cpu_extraction.cpp  cuda_extraction.cu  main.cpp  main.cu  metrics.cpp  validate.cpp  vtk_load.cpp  vtk_load.cu
src/alg/: critPoints.cu  inspector.cpp  test_driver.cu
